Make all necessary changes for CRAN, plays well with others now...

--- a/vignettes/Overview.Rmd
+++ b/vignettes/Overview.Rmd
@@ -18,7 +18,6 @@ The COPASutils will package first be loaded so that we can utilize the associate
 
 ```{r set-options, echo=FALSE, cache=FALSE}
 options(width = 120)
-opts_knit$set(root.dir = "../inst/data")
 ```
 
 ```{r message=FALSE}
@@ -27,7 +26,15 @@ library(COPASutils)
 
 ## Reading Data
 
+> **Note:** All of the raw .txt files referenced below are available at <https://github.com/AndersenLab/COPASutils-data>
+
 We can now read in the plate data from one of the example data sets. In this GWAS experimental design, each plate is set up with three worms sorted to each well in every other column. An example data set, called "plateData1.txt", that illustrates this step of the experiment is available from the Andersen Laboratory website (andersenlab.org). This text file is a representative example of raw data collected from a Union Biometrica BIOSORT large particle flow cytometer with ReFLx sampler. We will first read this file in and save it to a data frame called `setupRaw`:
+
+```{r echo=FALSE, message=FALSE}
+download.file("https://raw.githubusercontent.com/AndersenLab/COPASutils-data/master/plateData1.txt", "plateData1.txt", method="curl")
+download.file("https://raw.githubusercontent.com/AndersenLab/COPASutils-data/master/BioSorter.txt", "BioSorter.txt", method="curl")
+```
+
 
 ```{r}
 setupRaw <- readPlate("plateData1.txt")
@@ -61,6 +68,11 @@ Lastly, we can read in a data file from a BioSorter machine, which utilizes the 
 biosorterData <- readPlate("BioSorter.txt", reflx=FALSE)
 head(biosorterData)
 ```
+
+```{r echo=FALSE, message=FALSE}
+file.remove("plateData1.txt", "BioSorter.txt")
+```
+
 
 ## Processing Data
 
